<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppProgress">

    <TextView
        android:id="@+id/selectLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="Select a language to see your progress"
        android:textColor="#000000"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/turkishButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="248dp"
        android:layout_height="85dp"
        android:layout_marginTop="68dp"
        android:text="@string/turkish"
        android:textSize="20sp"
        android:onClick="onClickLanguageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectLang" />

    <Button
        android:id="@+id/englishButtonProgress"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="248dp"
        android:layout_height="85dp"
        android:textSize="20sp"
        android:layout_marginTop="52dp"
        android:text="@string/english"
        android:onClick="onClickLanguageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turkishButton" />

    <Button
        android:id="@+id/germanButtonProgress"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="248dp"
        android:layout_height="85dp"
        android:layout_marginTop="44dp"
        android:text="@string/german"
        android:textSize="20sp"
        android:onClick="onClickLanguageButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/englishButtonProgress"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>